# llm-wiki

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  schema.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: __init__.py  cli.py  config.py  extract.py  ingest.py  lint.py  llm.py  models.py  query.py  search.py  wiki.py
tests/: conftest.py  test_config.py  test_extract.py  test_ingest.py  test_lint.py  test_llm.py  test_models.py  test_query.py  test_search.py  test_wiki.py
